--- a/index.html
+++ b/index.html
@@ -37,17 +37,25 @@
       <li><a href="catalog.html">Collection</a></li>
       <li><a href="#visit">Visit Store</a></li>
     </ul>
-  </div>
+  </div> 
 
   <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-content animate-on-scroll">
-      <p class="hero-tagline">Premium Kidswear</p>
-      <h1 class="hero-title">Adorable Fashion,<br>Crafted for Little Ones</h1>
-      <p class="hero-subtitle">Each piece in our collection is designed for comfort, style, and the joy of childhood. Premium quality children's clothing.</p>
+  <section class="hero glass-hero">
+  <div class="glass-card animate-on-scroll">
+    <div class="glass-content" justify-content="center" align-items="center">
+      <h1>
+        Find the perfect<br>
+        complement<br>
+        to your style
+      </h1>
+      <p>
+        Premium kidswear crafted with care, comfort, and timeless elegance.
+      </p>
       <a href="catalog.html" class="btn btn-primary">Explore Collection</a>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- New Arrivals -->
   <section class="section new-arrivals">
